feat: add images controller
