# src/main/openapi/openapi-bff.yaml
@@ -601,8 +601,140 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProblemDetailResponse'
+  /images/{refId}/{refType}:
+    post:
+      x-onecx:
+        permissions:
+          workspaces:
+            - write
+      tags:
+        - imagesInternal
+      description: Upload Images
+      parameters:
+        - in: header
+          name: Content-Length
+          required: true
+          schema:
+            minimum: 1
+            maximum: 110000
+            type: integer
+        - name: refId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: refType
+          in: path
+          required: true
+          schema:
+            $ref: "#/components/schemas/RefType"
+      operationId: uploadImage
+      requestBody:
+        required: true
+        content:
+          image/*:
+            schema:
+              type: string
+              format: binary
+      responses:
+        "201":
+          description: CREATED
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ImageInfo'
+        "400":
+          description: Bad Request
+    get:
+      x-onecx:
+        permissions:
+          workspaces:
+            - read
+      tags:
+        - imagesInternal
+      description: Get Image by id
+      operationId: getImage
+      parameters:
+        - name: refId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: refType
+          in: path
+          required: true
+          schema:
+            $ref: "#/components/schemas/RefType"
+      responses:
+        "200":
+          description: OK
+          content:
+            image/*:
+              schema:
+                type: string
+                format: binary
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
+    put:
+      x-onecx:
+        permissions:
+          workspaces:
+            - write
+      tags:
+        - imagesInternal
+      description: update Images
+      operationId: updateImage
+      parameters:
+        - in: header
+          name: Content-Length
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 110000
+        - name: refId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: refType
+          in: path
+          required: true
+          schema:
+            $ref: "#/components/schemas/RefType"
+      requestBody:
+        required: true
+        content:
+          image/*:
+            schema:
+              type: string
+              format: binary
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ImageInfo'
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
 components:
   schemas:
+    RefType:
+      type: string
+      enum: [ logo, favicon ]
+    ImageInfo:
+      type: object
+      properties:
+        id:
+          type: string
     Workspace:
       required:
         - name
